--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,15 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.20.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.1"
+    "mongoose": "^8.6.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
+    "randomstring": "^1.3.0"
   }
 }
